--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
+<app-navbar *ngIf="isLoggedIn$ | async"></app-navbar>
 <div *ngIf="isLoading$ | async" class="spinner-border" role="status">
     <span class="sr-only">Loading...</span>
   </div>
+
 <router-outlet></router-outlet>
