button and check box

--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -3,3 +3,5 @@
 [tableData]="postsList" 
 (emitAction)="buttonAction($event)"
 ></app-data-table>
+
+<app-button (action)="sendPosts($event)" [btnContent]="nextButton"></app-button>
