--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -2,6 +2,7 @@
 <div class="mb-3">
     <label for="">username</label>
     <input type="text" class="form-control" formControlName="username" id="username">
+    <button>click</button>
 </div>
 <div>
     <label for="">password</label>
